# rocket

./: .gitignore  CLAUDE.md  CMakeLists.txt  NETWORK_COMMANDS_CHEATSHEET.md  README.md  analyze_server_perf.sh  build.sh  compile_commands.json  debug.txt  makefile  rename_members.py  run_benchmark.sh  todo  tsan_suppressions.txt
conf/: rocket.xml  rocket_client.xml
docs/: BENCHMARK.md  C++20实现echo服务器.md  asio-IO多路复用.md
rocket/common/: async_logger.cc  config.cc  config.h  exception.h  log.cc  log.h  log_event.cc  logger.cc  msg_id_util.cc  mutex.h  run_time.cc  run_time.h  singleton.h  spinlock.h  thread_local_buffer.cc  thread_local_buffer.h  util.cc  util.h
rocket/logger/: async_logger.cc  log.h  log_event.cc  logger.cc  thread_local_buffer.cc  thread_local_buffer.h
rocket/net/: event_loop.cc  event_loop.h  eventloop.cc  eventloop.h  eventpoll.h  fd_event.h  io_thread.cc  io_thread.h  io_thread_group.cc  io_thread_group.h  io_thread_singleton.h  pending_connection.h
rocket/net/coder/: abstract_coder.h  abstract_protocol.h  string_coder.h  tinypb_coder.cc  tinypb_coder.h  tinypb_protocol.h
rocket/net/rpc/: etcd_registry.cc  etcd_registry.h  rpc_channel.cc  rpc_channel.h  rpc_closure.h  rpc_controller.cc  rpc_controller.h  rpc_dispatcher.cc  rpc_dispatcher.h  rpc_interface.cc  rpc_interface.h
rocket/net/tcp/: tcp_buffer.cc  tcp_buffer.h  tcp_client.cc  tcp_client.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h
testcases/: test_client.cc  test_rpc_bench.cc  test_rpc_client.cc  test_rpc_server.cc  test_tcp.cc
testcases/proto/: order.pb.h
testcases/proto/co_stub/: co_order_stub.cc  co_order_stub.h
